--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Nothing to see here...</h1>
-    <div id="app" />
-    <script src="../public/main.public.js" type="text/javascript"></script>
+    <div id="app"></div>
+    <script src="public/main.public.js" type="text/javascript"></script>
   </body>
 </html>
