Include Shamrock on index page

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>It's a blank page!</title>
+    <link rel="stylesheet" href="public/main.css">
   </head>
   <body>
     <h1>Nothing to see here...</h1>
