--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Nothing to see here...</h1>
-    <div id="app"></div>
+    <div class="wrap">
+      <div id="app"></div>
+    </div>
     <script src="public/main.public.js" type="text/javascript"></script>
   </body>
 </html>
